# src/router/blogPost/index.js
@@ -1,11 +1,12 @@
 const express = require('express');
 const rescue = require('express-rescue');
 const blogPostController = require('../../controllers/blogPostController');
-// const authToken = require('../../middlewares/authToken');
+const authToken = require('../../middlewares/authToken');
 const { validate, validateUpdated } = require('../../middlewares/blogPostMiddleware');
 
 const blogPostRouter = express.Router();
 
+blogPostRouter.use(authToken);
 blogPostRouter.post('/', validate, rescue(blogPostController.create));
 blogPostRouter.get('/', blogPostController.getAll);
 blogPostRouter.get('/search', blogPostController.search);
